--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -112,7 +112,6 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.images.ImageSelectActivity"
-            android:noHistory="true"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
         <activity
@@ -170,7 +169,6 @@
         <activity
             android:name="com.twofours.surespot.activities.ExternalInviteActivity"
             android:label="@string/title_activity_external_invite"
-            android:noHistory="true"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
@@ -180,8 +178,7 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.billing.BillingActivity"
-            android:label="@string/title_activity_billing"
-            android:noHistory="true" >
+            android:label="@string/title_activity_billing">
             <intent-filter>
                 <action android:name="com.twofours.surespot.billing.BillingActivity" />
 
