--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.twofours.surespot"
-    android:versionCode="12"
-    android:versionName="f4fa3f4" >
+    android:versionCode="13"
+    android:versionName="chippy" >
 
     <uses-sdk
         android:minSdkVersion="8"
