--- a/project.properties
+++ b/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt:proguard-google-api-client.txt
 
 # Project target.
 target=android-17
@@ -16,6 +16,6 @@ android.library.reference.1=../libs/android/github/forks/ActionBarSherlock/actio
 android.library=false
 android.library.reference.2=../libs/android/github/forks/android-async-http
 android.library.reference.3=../libs/android/common
-android.library.reference.4=../libs/android/github/forks/ImageViewZoom/ImageViewTouch
-android.library.reference.5=../libs/android/github/forks/SecureWebSockets
-android.library.reference.6=../libs/android/github/forks/Android-ViewPagerIndicator/library
+android.library.reference.4=../libs/android/github/forks/SecureWebSockets
+android.library.reference.5=../libs/android/github/forks/Android-ViewPagerIndicator/library
+android.library.reference.6=../libs/android/github/forks/ImageViewZoom/ImageViewTouch
