--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -132,11 +132,22 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="com.twofours.surespot.backup.ImportIdentityActivity" >
+        <activity
+            android:name="com.twofours.surespot.backup.ImportIdentityActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="com.twofours.surespot.backup.ImportIdentityActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.google.android.apps.drive.APP_ID"
+                android:value="id=428168563991" />
+
+            <intent-filter>
+                <action android:name="com.google.android.apps.drive.DRIVE_OPEN" />
+                <data android:mimeType="application/ssi" />
             </intent-filter>
         </activity>
         <activity
@@ -191,7 +202,7 @@
             android:finishOnTaskLaunch="true"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@android:style/Theme.Dialog" />        
+            android:theme="@android:style/Theme.Dialog" />
         <activity
             android:name="com.twofours.surespot.activities.AboutActivity"
             android:label="@string/title_activity_about" >
