--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -134,6 +134,7 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.backup.ImportIdentityActivity"
+            android:configChanges="orientation"
             android:exported="true" >
             <intent-filter>
                 <action android:name="com.twofours.surespot.backup.ImportIdentityActivity" />
