--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,10 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <supports-screens
+        android:largeScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:name="com.twofours.surespot.SurespotApplication"
         android:icon="@drawable/surespotlauncher"
@@ -133,11 +137,11 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.backup.ImportIdentityActivity"
-            android:screenOrientation="portrait"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="com.twofours.surespot.backup.ImportIdentityActivity" />
-            
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
@@ -147,8 +151,9 @@
 
             <intent-filter>
                 <action android:name="com.google.android.apps.drive.DRIVE_OPEN" />
+
                 <data android:mimeType="application/ssi" />
-                 <data android:mimeType="application/vnd.google-apps.drive-sdk.428168563991" />
+                <data android:mimeType="application/vnd.google-apps.drive-sdk.428168563991" />
             </intent-filter>
         </activity>
         <activity
