--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,16 @@
 	<classpathentry kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry kind="lib" path="/android-async-http/libs/httpclientandroidlib-1.1.1.madman.jar" sourcepath="/home/adam/dev/surespot/libs/android/google/adam-httpclientandroidlib/script"/>
+	<classpathentry kind="lib" path="libs/google-http-client-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/google-http-client-android-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/google-oauth-client-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="libs/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="libs/google-api-services-drive-v2-rev86-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/google-api-client-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/google-api-client-android-1.15.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/google-http-client-gson-1.15.0-rc.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/viewpagerindicator"/>
@@ -18,6 +28,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/SSLWebSocket"/>
 	<classpathentry excluding="com/twofours/surespot/activities/StartupActivity.java|com/twofours/surespot/chat/ChatActivity.java|com/twofours/surespot/friends/FriendActivity.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.google.gdt.eclipse.managedapis.MANAGED_API_CONTAINER/drive-v2r76lv1.14.2-beta"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
