build using aac project instead of jar to allow resource access

--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/SSLWebSocket"/>
 	<classpathentry excluding="com/twofours/surespot/activities/StartupActivity.java|com/twofours/surespot/chat/ChatActivity.java|com/twofours/surespot/friends/FriendActivity.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/aac-enc"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
