--- a/project.properties
+++ b/project.properties
@@ -19,3 +19,4 @@ android.library.reference.3=../libs/android/common
 android.library.reference.4=../libs/android/github/forks/SecureWebSockets
 android.library.reference.5=../libs/android/github/forks/Android-ViewPagerIndicator/library
 android.library.reference.6=../libs/android/github/forks/ImageViewZoom/ImageViewTouch
+android.library.reference.7=../libs/android/github/forks/android-aac-enc
