--- a/project.properties
+++ b/project.properties
@@ -21,3 +21,4 @@ android.library.reference.5=../libs/android/github/forks/Android-ViewPagerIndica
 android.library.reference.6=../libs/android/github/forks/ImageViewZoom/ImageViewTouch
 android.library.reference.7=../libs/android/github/forks/android-aac-enc
 android.library.reference.8=../libs/android/httpclientandroidlib
+android.library.reference.9=../libs/android/google/google-play-services_lib
