--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.twofours.surespot"
-    android:versionCode="42"
+    android:versionCode="42"    
     android:versionName="42" >
     <uses-sdk
         android:minSdkVersion="10"
@@ -37,6 +37,7 @@
         android:xlargeScreens="true" />
 
     <application
+        android:hardwareAccelerated="true"
         android:name="com.twofours.surespot.SurespotApplication"
         android:icon="@drawable/surespotlauncher"
         android:label="surespot"
