--- a/.classpath
+++ b/.classpath
@@ -4,8 +4,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
-	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.3-SNAPSHOT.jar" sourcepath="/home/adam/dev/surespot/libs/android/github/forks/spongycastle"/>
-	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.3-SNAPSHOT.jar" sourcepath="/home/adam/dev/surespot/libs/android/github/forks/spongycastle"/>
 	<classpathentry kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.1.jar"/>
 	<classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
@@ -17,6 +15,8 @@
 	<classpathentry kind="lib" path="libs/google-http-client-gson-1.17.0-rc.jar"/>
 	<classpathentry kind="lib" path="libs/google-oauth-client-1.17.0-rc.jar"/>
 	<classpathentry kind="lib" path="libs/google-api-services-drive-v2-rev103-1.17.0-rc.jar"/>
+	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.4-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/viewpagerindicator"/>
