fix weird state after sending image from gallery and coming back in - RM#567. Looked to be running an older instance of surespot. Set launch mode to singleTask to try and fix - also required calling setIntent in onNewIntent.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,7 +70,7 @@
         <activity
             android:name="com.twofours.surespot.activities.MainActivity"
             android:label="@string/title_activity_main"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateUnchanged" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
