start of store password in keychain

--- a/.classpath
+++ b/.classpath
@@ -15,8 +15,6 @@
 	<classpathentry kind="lib" path="libs/google-http-client-gson-1.17.0-rc.jar"/>
 	<classpathentry kind="lib" path="libs/google-oauth-client-1.17.0-rc.jar"/>
 	<classpathentry kind="lib" path="libs/google-api-services-drive-v2-rev103-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.4-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.4-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/viewpagerindicator"/>
@@ -26,5 +24,6 @@
 	<classpathentry excluding="com/twofours/surespot/activities/StartupActivity.java|com/twofours/surespot/chat/ChatActivity.java|com/twofours/surespot/friends/FriendActivity.java|com/twofours/surespot/voice/VoiceMessagePlayer.java|com/twofours/surespot/voice/VoiceMessageContainer.java" kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/google-play-services_lib"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-keystore"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
