--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.twofours.surespot"
         minSdkVersion 10
-        targetSdkVersion 18
+        targetSdkVersion 22
         multiDexEnabled true
     }
 
@@ -33,13 +33,13 @@ dependencies {
     compile project(':httpclientandroidlib')
     compile project(':androidkeystore')
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.android.gms:play-services-drive:7.5.0'
     compile 'com.google.http-client:google-http-client-gson:1.19.0'
-    compile 'com.google.code.gson:gson:2.1'
-    compile 'com.google.guava:guava:14.0.1'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.guava:guava:18.0'
     compile 'com.google.protobuf:protobuf-java:2.4.1'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:22.2.0'
     compile files('libs/gcm.jar')
     compile files('libs/google-api-client-1.17.0-rc.jar')
     compile files('libs/google-api-client-android-1.17.0-rc.jar')
