--- a/androidkeystore/build.gradle
+++ b/androidkeystore/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         minSdkVersion 10
