--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
 		<service android:name="com.twofours.surespot.services.CredentialCachingService"
 			android:exported="false">
 		</service>
+		<service
+			android:name=".services.ChatTransmissionService"
+			android:exported="false" >
+		</service>
 
 		<activity android:name="com.twofours.surespot.activities.MainActivity"
 			android:label="@string/title_activity_main" android:launchMode="singleTask"
