aggressive refactor, taking control on Chat Controller, pulling into Surespot Application where appropriate, more responsibility to Transmission Service

--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
             android:name="com.twofours.surespot.services.CredentialCachingService"
             android:exported="false"></service>
         <service
-            android:name=".services.ChatTransmissionService"
+            android:name=".services.CommunicationService"
             android:exported="false" >
         </service>
         <activity
