--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         </service>
         <activity
             android:name="com.twofours.surespot.activities.MainActivity"
-            android:configChanges="orientation"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateUnchanged">
