--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile project(':imageViewTouch')
     compile project(':httpclientandroidlib')
     compile project(':androidkeystore')
+    // compile 'com.android.support:appcompat-v7:23.0.3'
+    compile project(":ColorPickerPreference")
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.google.android.gms:play-services-drive:7.8.0'
