--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -8,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.twofours.surespot"
         minSdkVersion 10
-        targetSdkVersion 21
+        targetSdkVersion 20
         multiDexEnabled false
     }
 
@@ -38,8 +37,6 @@ dependencies {
     compile project(':imageViewTouch')
     compile project(':httpclientandroidlib')
     compile project(':androidkeystore')
-    // compile 'com.android.support:appcompat-v7:23.0.3'
-    compile project(":ColorPickerPreference")
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.google.android.gms:play-services-drive:7.8.0'
@@ -48,7 +45,8 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.protobuf:protobuf-java:2.4.1'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v4:20.0.0'
+    compile files('libs/gcm.jar')
     compile files('libs/google-api-client-1.17.0-rc.jar')
     compile files('libs/google-api-client-android-1.17.0-rc.jar')
     compile files('libs/google-api-services-drive-v2-rev103-1.17.0-rc.jar')
