--- a/androidkeystore/build.gradle
+++ b/androidkeystore/build.gradle
@@ -4,17 +4,17 @@ android {
     compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
-    defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 22
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
+//    defaultConfig {
+//        minSdkVersion 10
+//        targetSdkVersion 22
+//    }
+//
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//        }
+//    }
 }
 
 dependencies {
