--- a/libs/android-ColorPickerPreference/ColorPickerPreference/build.gradle
+++ b/libs/android-ColorPickerPreference/ColorPickerPreference/build.gradle
@@ -4,18 +4,18 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
-    defaultConfig {
-        minSdkVersion 7
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+//    defaultConfig {
+//        minSdkVersion 7
+//        targetSdkVersion 21
+//        versionCode 1
+//        versionName "1.0"
+//    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
 }
 
 dependencies {
