--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -4,9 +4,6 @@
     android:versionCode="61"
     android:versionName="61">
 
-    <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="23" />
 
     <permission
         android:name="com.twofours.surespot.permission.C2D_MESSAGE"
@@ -41,6 +38,9 @@
         android:icon="@drawable/surespotlauncher"
         android:label="surespot"
         android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"></meta-data>
+
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
