--- a/surespotcommon/build.gradle
+++ b/surespotcommon/build.gradle
@@ -4,22 +4,22 @@ android {
     compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
-    defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 22
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
+//    defaultConfig {
+//        minSdkVersion 10
+//        targetSdkVersion 22
+//    }
+//
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//        }
+//    }
 }
 
 dependencies {
     compile project(':httpclientandroidlib')
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v4:19.0.1'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile files('libs/acra-4.5.0.jar')
     compile files('libs/sc-light-jdk15on-1.47.0.4-SNAPSHOT.jar')
