--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -13,6 +13,7 @@ android {
     buildTypes {
         debug {
             minifyEnabled true
+            signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt', 'proguard-google-api-client.txt'
         }
         release {
@@ -22,6 +23,14 @@ android {
         }
     }
 
+    signingConfigs {
+        debug {
+            storeFile file('/home/adam/raid/2fours/android_keystore/custom-debug.keystore')
+                    storePassword "android"
+                    keyAlias "androiddebugkey"
+                    keyPassword "android"
+        }
+    }
     dexOptions {
         incremental true
         javaMaxHeapSize "4g"
@@ -42,9 +51,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.protobuf:protobuf-java:2.4.1'
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:19.0.1'
     compile files('libs/gcm.jar')
+    compile 'com.android.support:support-v4:19.0.1'
     compile files('libs/google-api-client-1.17.0-rc.jar')
     compile files('libs/google-api-client-android-1.17.0-rc.jar')
     compile files('libs/google-api-services-drive-v2-rev103-1.17.0-rc.jar')
