--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -42,7 +42,6 @@ android {
 dependencies {
     compile project(':androidasynchttp')
     compile project(':surespotcommon')
-    compile project(':sSLWebSocket')
     compile project(':viewpagerindicator')
     compile project(':imageViewTouch')
     compile project(':httpclientandroidlib')
@@ -62,4 +61,5 @@ dependencies {
     compile files('libs/google-http-client-android-1.17.0-rc.jar')
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
     compile files('libs/jsr305-1.3.9.jar')
+    compile 'io.socket:socket.io-client:0.6.1'
 }
