--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
     compile files('libs/jsr305-1.3.9.jar')
     compile 'io.socket:socket.io-client:0.6.1'
+    compile 'com.parse.bolts:bolts-tasks:1.3.0'
+    compile 'com.parse.bolts:bolts-applinks:1.3.0'
 }
