--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -3,18 +3,18 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.twofours.surespot"
-        minSdkVersion 10
-        targetSdkVersion 19
-        multiDexEnabled false
+        minSdkVersion 15
+        targetSdkVersion 23
+        multiDexEnabled true
     }
 
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt', 'proguard-google-api-client.txt'
         }
@@ -47,21 +47,20 @@ dependencies {
     compile project(':httpclientandroidlib')
     compile project(':androidkeystore')
     compile project(":ColorPickerPreference")
-    compile 'com.google.android.gms:play-services-gcm:7.8.0'
-    compile 'com.google.android.gms:play-services-drive:7.8.0'
+    compile('com.google.android.gms:play-services-gcm:8.4.0')
+    compile('com.google.android.gms:play-services-drive:8.4.0')
     compile 'com.google.http-client:google-http-client-gson:1.19.0'
-    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.protobuf:protobuf-java:2.4.1'
-    //compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'com.android.support:support-v4:19.0.1'
+    compile 'com.android.support:multidex:1.0.1'
     compile files('libs/google-api-client-1.17.0-rc.jar')
     compile files('libs/google-api-client-android-1.17.0-rc.jar')
     compile files('libs/google-api-services-drive-v2-rev103-1.17.0-rc.jar')
     compile files('libs/google-http-client-android-1.17.0-rc.jar')
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
-    compile files('libs/jsr305-1.3.9.jar')
-    compile 'io.socket:socket.io-client:0.6.1'
-    compile 'com.parse.bolts:bolts-tasks:1.3.0'
-    compile 'com.parse.bolts:bolts-applinks:1.3.0'
+    //compile files('libs/jsr305-1.3.9.jar')
+    compile 'io.socket:socket.io-client:0.7.0'
+  //  compile 'com.parse.bolts:bolts-tasks:1.3.0'
+  //  compile 'com.parse.bolts:bolts-applinks:1.3.0'
 }
