--- a/surespot/build.gradle
+++ b/surespot/build.gradle
@@ -40,14 +40,13 @@ android {
 }
 
 dependencies {
-    //compile project(':androidasynchttp')
     compile project(':surespotcommon')
     compile project(':viewpagerindicator')
     compile project(':imageViewTouch')
-    //compile project(':httpclientandroidlib')
     compile project(':androidkeystore')
     compile project(":ColorPickerPreference")
-    //compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    //using 3.0.1 because that's what socket.io-client-0.7.0 pulls down
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile('com.google.android.gms:play-services-gcm:8.4.0')
     compile('com.google.android.gms:play-services-drive:8.4.0')
     compile 'com.google.http-client:google-http-client-gson:1.19.0'
@@ -62,6 +61,4 @@ dependencies {
     compile files('libs/google-oauth-client-1.17.0-rc.jar')
     //compile files('libs/jsr305-1.3.9.jar')
     compile 'io.socket:socket.io-client:0.7.0'
-  //  compile 'com.parse.bolts:bolts-tasks:1.3.0'
-  //  compile 'com.parse.bolts:bolts-applinks:1.3.0'
 }
