(*) updated build.gradle to use ext vars, latest version of tools and dependencies

--- a/surespotcommon/build.gradle
+++ b/surespotcommon/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 22
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
     }
 
     buildTypes {
@@ -19,7 +19,7 @@ android {
 
 dependencies {
     compile project(':httpclientandroidlib')
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v4:23.2.1'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile files('libs/acra-4.5.0.jar')
     compile files('libs/sc-light-jdk15on-1.47.0.4-SNAPSHOT.jar')
