--- a/surespot/src/main/AndroidManifest.xml
+++ b/surespot/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.twofours.surespot"
           xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="64"
-          android:versionName="64">
+          android:versionCode="65"
+          android:versionName="65">
 
 
     <permission
@@ -37,7 +37,7 @@
         android:name="com.twofours.surespot.SurespotApplication"
         android:icon="@drawable/surespotlauncher"
         android:label="surespot"
-        android:theme="@style/AppTheme">
+        android:theme="@style/BlackTheme">
 
         <meta-data
             android:name="com.google.android.gms.version"
